--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Minhas Anotacoes</string>
+    <string name="app_name">My Notes</string>
+    <string name="button_add_note_description">Button to add a new note</string>
 </resources>
