Activity Note to add a new Note complete and note new note add in database

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Minhas Anotações</string>
     <string name="button_add_note_description">Botão para adicionar uma nova nota</string>
+    <string name="note_hint_text">Digite as suas anotações</string>
 </resources>
